--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         body {
-            background-color: #e4136b;
+            background-color: #E0FFFF;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
