--- a/login.html
+++ b/login.html
@@ -14,11 +14,11 @@
     to { opacity: 1; transform: translateY(0); }
     }
     @keyframes buttonHover {
-    from { background-color: #e4136b; }
-    to { background-color: #c5115a; }
+    from { background-color: #9B870C; }
+    to { background-color: #006400; }
     }
     body {
-    background-color: #e4136b;
+    background-color: #00008B;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
