--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         body {
-            background-color: #E0FFFF;
+            background-color:  #00008B;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -42,7 +42,7 @@
             max-width: 110px;
         }
         .container {
-            background-color: #FFFFFF;
+            background-color:  #008000;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -59,7 +59,7 @@
             display: block;
             width: 100%;
             height: 2px;
-            background-color: #C70039;
+            background-color: #FF0000;
             position: absolute;
             bottom: -5px;
             left: 0;
@@ -73,7 +73,7 @@
         input[type="number"] {
             width: 100%;
             padding: 10px;
-            border: 1px solid #CCCCCC;
+            border: 1px solid #FFFF00;
             border-radius: 5px;
             box-sizing: border-box;
             font-family: Arial, sans-serif;
@@ -82,10 +82,10 @@
         input[type="text"]::placeholder,
         input[type="number"]::placeholder {
             font-family: Arial, sans-serif;
-            color: #999999;
+            color:  #A0522D;
         }
         input:focus {
-            border-color: #e4136b;
+            border-color: #800080;
             box-shadow: 0 0 5px rgba(228, 19, 107, 0.5);
             outline: none;
         }
@@ -93,7 +93,7 @@
             border-color: red;
         }
         #loginButton {
-            background-color: #FF0000;
+            background-color: #4682B4;
             color: #FFFFFF;
             border: none;
             padding: 10px 20px;
@@ -109,7 +109,7 @@
             animation: fadeIn 2.5s ease-in-out;
         }
         #loginButton:hover {
-            background-color: #5C4033;
+            background-color: #FFA500;
             animation: buttonHover 0.3s forwards;
             transform: translateY(-2px);
         }
