--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     to { background-color: #006400; }
     }
     body {
-    background-color: #00008B;
+    background-color: #000000;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -40,7 +40,7 @@
     max-width: 110px;
     }
     .container {
-    background-color: #FFFFFF;
+    background-color: #d28b9c;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -56,7 +56,7 @@
     input[type="number"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #808000;
     border-radius: 5px;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
@@ -65,10 +65,10 @@
     input[type="number"]::placeholder,
     input[type="number"]::placeholder {
     font-family: Arial, sans-serif;
-    color: #999999;
+    color: #800080;
     }
     input:focus {
-    border-color: #e4136b;
+    border-color: #808080;
     box-shadow: 0 0 5px rgba(228, 19, 107, 0.5);
     outline: none;
     }
@@ -76,7 +76,7 @@
     border-color: red;
     }
     #loginButton {
-    background-color: #e4136b;
+    background-color: #800000;
     color: #FFFFFF;
     border: none;
     padding: 10px 20px;
@@ -92,7 +92,7 @@
     animation: fadeIn 2.5s ease-in-out;
     }
     #loginButton:hover {
-    background-color: #c5115a;
+    background-color: #4682B4;
     animation: buttonHover 0.3s forwards;
     transform: translateY(-2px);
     }
